Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-81069

PositionSource's nmeasource gives Segmentation fault when tcpsocket closed

    XMLWordPrintable

Details

    • Linux/X11
    • a5e677741a9cbc8b257a58a2ffe3c5f5ee785152 (qt/qtlocation/5.15)

    Description

      I am working on getting gps input into a Map that is based on QML. PositionSource QML type's nmeaSource expects socket input to QML Type "Map". And QML Type "Map" reads NMEA data and shows a marker on the coordinates. This works without a problem. But when tcpsocket closed from server it gives segmentation fault. I want to introduce some sort of error handling to QTCPServer implementation that will communicate with PositionSource type. But I am unable to proceed since destruction or closing of QTcpServer or QTcpSocket causes Segmentation Fault, when used with QML PositionSource.

      Attachments

        1. basicTcpServer.zip
          8 kB
          Faruk Yıldırım
        For Gerrit Dashboard: QTBUG-81069
        # Subject Branch Project Status CR V

        Activity

          People

            tpochep Timur Pocheptsov
            yildirimfaruk Faruk Yıldırım
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes