QDeclarativePositionSource::socketError - use deleteLater

This is a slot directly connected to the socket's signal. This means,
deleting the socket from the slot leaves the socket's code that was
emitting with an invalid 'this' pointer.

Fixes: QTBUG-81069
Change-Id: I5b915f8d103809b80d1af34655eaa5231bddc7a6
Reviewed-by: Timur Pocheptsov <timur.pocheptsov@qt.io>
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>